# ai-rake

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ai-rake.cabal  cabal.project  flake.nix  hie.yaml  llmchat-effectful.cabal  run-ghcid.sh
app/: GenCliSupport.hs  GenImage.hs  GenImageCLI.hs  GenSpeech.hs  GenSpeechCLI.hs  GenVideo.hs  GenVideoCLI.hs  MinimalExample.hs  RakeCliSupport.hs  RakeImage.hs  RakeImageCLI.hs  RakeTTS.hs  RakeTTSCLI.hs  RakeVideo.hs  RakeVideoCLI.hs
specs/: message_streaming.md  stateful_interface.md
src/: LlmChat.hs  Rake.hs
src/LlmChat/: ChatMsg.hs  Effect.hs  Error.hs  Media.hs  PostgresLogger.hs  Tool.hs  Types.hs  WithStorage.hs
src/LlmChat/Internal/: Schema.hs
src/LlmChat/Postgres/: Internal.hs
src/LlmChat/Providers/: Google.hs
src/LlmChat/Providers/Google/: Convert.hs
src/LlmChat/Providers/OpenAI/: ChatCompletion.hs  Images.hs  Responses.hs
src/LlmChat/Providers/Responses/: Internal.hs  Projection.hs  Request.hs  Runner.hs
src/LlmChat/Providers/XAI/: Imagine.hs  Responses.hs
src/LlmChat/Providers/XAI/Imagine/: Client.hs  Types.hs
src/LlmChat/Storage/: Effect.hs  InMemory.hs  Postgres.hs
src/Rake/: Effect.hs  Error.hs  Media.hs  PostgresLogger.hs  TTS.hs  Tool.hs  Types.hs
src/Rake/Internal/: Schema.hs  Sse.hs
src/Rake/MediaStorage/: Directory.hs  Effect.hs  InMemory.hs
src/Rake/Postgres/: Internal.hs
src/Rake/Providers/: Internal.hs
src/Rake/Providers/Chat/: Projection.hs  Responses.hs
src/Rake/Providers/Gemini/: Chat.hs  Images.hs
src/Rake/Providers/OpenAI/: Chat.hs  Images.hs  TTS.hs
src/Rake/Providers/TTS/: Internal.hs
src/Rake/Providers/XAI/: Chat.hs  Imagine.hs  TTS.hs
src/Rake/Providers/XAI/Imagine/: Client.hs  Types.hs
src/Rake/Storage/: Effect.hs  InMemory.hs  Postgres.hs
src/Rake/TTS/: Types.hs
test/: GenImageCLISpec.hs  GenSpeechCLISpec.hs  GenVideoCLISpec.hs  ProviderAgnosticTests.hs  ProviderStructuredSchemaBehaviorTests.hs  RakeImageCLISpec.hs  RakeTTSCLISpec.hs  RakeVideoCLISpec.hs  StructuredSchemaTestTypes.hs
test/LlmChat/: ChatSpec.hs  ErrorSpec.hs  PostgresLoggerSpec.hs  PostgresPoolSpec.hs  PostgresSpec.hs  TypesSpec.hs  WithStorageSpec.hs
test/LlmChat/Provider/: GoogleSpec.hs  MediaSpec.hs  ResponsesRenderSpec.hs  XAISpec.hs
test/LlmChat/Storage/: InMemorySpec.hs
test/Rake/: ChatSpec.hs  ErrorSpec.hs  PostgresLoggerSpec.hs  PostgresPoolSpec.hs  PostgresSpec.hs  ReplaySpec.hs  TypesSpec.hs
test/Rake/MediaStorage/: DirectorySpec.hs
test/Rake/Provider/: GeminiSpec.hs  MediaSpec.hs  OpenAISpec.hs  ResponsesRenderSpec.hs  XAISpec.hs
test/Rake/Storage/: InMemorySpec.hs
