cabal-version: 3.8

name:           ai-rake
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/tommyengstrom/ai-rake#readme>
homepage:       https://github.com/tommyengstrom/ai-rake#readme
bug-reports:    https://github.com/tommyengstrom/ai-rake/issues
author:         Tommy Engström
maintainer:     tommy@tommyengstrom.com
copyright:      2025 Tommy Engström
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/tommyengstrom/ai-rake

common shared_opts
  default-language: GHC2024
  default-extensions:
      AllowAmbiguousTypes
      BlockArguments
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FunctionalDependencies
      GeneralizedNewtypeDeriving
      LambdaCase
      NoFieldSelectors
      NoImplicitPrelude
      NoStarIsType
      OverloadedLabels
      OverloadedLists
      OverloadedStrings
      RecordWildCards
      StrictData
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilyDependencies
      TypeOperators
      ViewPatterns

  ghc-options:
    -Weverything
    -Werror
    -Wno-all-missed-specialisations
    -Wno-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
    -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures
    -Wno-monomorphism-restriction
    -Wno-missing-role-annotations
    -Wno-partial-fields
    -Wno-unused-packages

  build-depends:
      aeson
    , base
    , bytestring
    , containers
    , effectful
    , effectful-th
    , effectful-postgresql
    , filelock
    , generic-lens
    , http-types
    , lens
    , monad-time-effectful
    , openapi3
    , servant-client
    , servant-client-core
    , postgresql-simple
    , relude
    , text
    , time
    , unliftio
    , uuid
    , vector

library
  import: shared_opts
  mixins:
    , effectful-core (Effectful.Internal.Monad)
  exposed-modules:
      Rake
      Rake.Effect
      Rake.Error
      Rake.Media
      Rake.MediaStorage.Effect
      Rake.MediaStorage.Directory
      Rake.MediaStorage.InMemory
      Rake.TTS
      Rake.Providers.Gemini.Chat
      Rake.Providers.Gemini.Images
      Rake.PostgresLogger
      Rake.Providers.OpenAI.Chat
      Rake.Providers.OpenAI.Images
      Rake.Providers.OpenAI.TTS
      Rake.Providers.XAI.Imagine
      Rake.Providers.XAI.Chat
      Rake.Providers.XAI.TTS
      Rake.Storage.Effect
      Rake.Storage.InMemory
      Rake.Storage.Postgres
      Rake.Tool
      Rake.Types
  other-modules:
      Rake.Postgres.Internal
      Rake.Internal.Sse
      Rake.Internal.Schema
      Rake.Providers.Chat.Projection
      Rake.Providers.Chat.Responses
      Rake.Providers.Internal
      Rake.Providers.TTS.Internal
      Rake.Providers.XAI.Imagine.Client
      Rake.Providers.XAI.Imagine.Types
      Rake.TTS.Types
  hs-source-dirs: src
  build-depends:
    , directory
    , http-api-data
    , http-client
    , http-client-tls
    , effectful-core
    , filepath
    , resource-pool
    , servant
    , servant-client

test-suite ai-rake-test
  import: shared_opts
  main-is: Main.hs
  other-modules:
      RakeCliSupport
      RakeImageCLI
      RakeImageCLISpec
      RakeTTSCLI
      RakeTTSCLISpec
      RakeVideoCLI
      RakeVideoCLISpec
      Rake.ChatSpec
      Rake.ErrorSpec
      Rake.PostgresLoggerSpec
      Rake.PostgresPoolSpec
      Rake.PostgresSpec
      Rake.Provider.GeminiSpec
      Rake.Provider.MediaSpec
      Rake.Provider.OpenAISpec
      Rake.ReplaySpec
      Rake.Provider.ResponsesRenderSpec
      Rake.Provider.XAISpec
      Rake.MediaStorage.DirectorySpec
      ProviderStructuredSchemaBehaviorTests
      StructuredSchemaTestTypes
      Rake.Storage.InMemorySpec
      Rake.TypesSpec
      ProviderAgnosticTests
  hs-source-dirs: test, app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , base64-bytestring
    , bytestring
    , ai-rake
    , effectful-core
    , deepseq
    , directory
    , hashable
    , http-client
    , http-client-tls
    , filepath
    , hspec
    , mtl
    , pretty-simple
    , process
    , unordered-containers
    , unliftio-pool
    , yaml

executable minimal-example
  import: shared_opts
  hs-source-dirs: app
  main-is: MinimalExample.hs
  build-depends:
      ai-rake
    , stm

executable rake-image
  import: shared_opts
  hs-source-dirs: app
  main-is: RakeImage.hs
  other-modules:
      RakeCliSupport
      RakeImageCLI
  build-depends:
      ai-rake
    , base64-bytestring
    , bytestring
    , directory
    , filepath
    , http-client
    , http-client-tls
    , process

executable rake-tts
  import: shared_opts
  hs-source-dirs: app
  main-is: RakeTTS.hs
  other-modules:
      RakeCliSupport
      RakeTTSCLI
  build-depends:
      ai-rake
    , base64-bytestring
    , bytestring
    , directory
    , filepath
    , http-client
    , http-client-tls
    , process

executable rake-video
  import: shared_opts
  hs-source-dirs: app
  main-is: RakeVideo.hs
  other-modules:
      RakeCliSupport
      RakeVideoCLI
  build-depends:
      ai-rake
    , base64-bytestring
    , bytestring
    , directory
    , filepath
    , http-client
    , http-client-tls
    , process
