cabal-version: 3.8

name:           llmchat-effectful
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/tommyengstrom/llmchat-effectful#readme>
homepage:       https://github.com/tommyengstrom/llmchat-effectful#readme
bug-reports:    https://github.com/tommyengstrom/llmchat-effectful/issues
author:         Tommy Engström
maintainer:     tommy@tommyengstrom.com
copyright:      2025 Tommy Engström
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/tommyengstrom/llmchat-effectful

common shared_opts
  default-language: GHC2024
  default-extensions:
      AllowAmbiguousTypes
      BlockArguments
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FunctionalDependencies
      GeneralizedNewtypeDeriving
      LambdaCase
      NoFieldSelectors
      NoImplicitPrelude
      NoStarIsType
      OverloadedLabels
      OverloadedLists
      OverloadedStrings
      RecordWildCards
      StrictData
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilyDependencies
      TypeOperators
      ViewPatterns

  ghc-options:
    -Weverything
    -Werror
    -Wno-all-missed-specialisations
    -Wno-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
    -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures
    -Wno-monomorphism-restriction
    -Wno-missing-role-annotations
    -Wno-partial-fields
    -Wno-unused-packages

  build-depends:
      aeson
    , base
    , containers
    , effectful
    , effectful-th
    , effectful-postgresql
    , generic-lens
    , http-types
    , lens
    , monad-time-effectful
    , openapi3
    , servant-client
    , postgresql-simple
    , relude
    , text
    , time
    , unliftio
    , uuid
    , vector

library
  import: shared_opts
  mixins:
    , effectful-core (Effectful.Internal.Monad)
  exposed-modules:
      LlmChat
      LlmChat.Effect
      LlmChat.Error
      LlmChat.Media
      LlmChat.PostgresLogger
      LlmChat.Providers.OpenAI.Images
      LlmChat.Providers.OpenAI.Responses
      LlmChat.Providers.XAI.Imagine
      LlmChat.Providers.XAI.Responses
      LlmChat.Storage.Effect
      LlmChat.Storage.InMemory
      LlmChat.Storage.Postgres
      LlmChat.Tool
      LlmChat.Types
  other-modules:
      LlmChat.Postgres.Internal
      LlmChat.Providers.Responses.Projection
      LlmChat.Providers.Responses.Request
      LlmChat.Providers.Responses.Runner
      LlmChat.Providers.Responses.Internal
      LlmChat.Internal.Schema
      LlmChat.Providers.XAI.Imagine.Client
      LlmChat.Providers.XAI.Imagine.Types
  hs-source-dirs: src
  build-depends:
    , http-api-data
    , http-client
    , http-client-tls
    , effectful-core
    , resource-pool
    , servant
    , servant-client

test-suite llmchat-effectful-test
  import: shared_opts
  main-is: Main.hs
  other-modules:
      GenCliSupport
      GenImageCLI
      GenImageCLISpec
      GenVideoCLI
      GenVideoCLISpec
      LlmChat.ChatSpec
      LlmChat.ErrorSpec
      LlmChat.PostgresLoggerSpec
      LlmChat.PostgresPoolSpec
      LlmChat.PostgresSpec
      LlmChat.Provider.MediaSpec
      LlmChat.Provider.OpenAISpec
      LlmChat.Provider.ResponsesRenderSpec
      LlmChat.Provider.XAISpec
      LlmChat.Storage.InMemorySpec
      LlmChat.TypesSpec
      ProviderAgnosticTests
  hs-source-dirs: test, app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , base64-bytestring
    , bytestring
    , llmchat-effectful
    , effectful-core
    , deepseq
    , directory
    , hashable
    , http-client
    , http-client-tls
    , filepath
    , hspec
    , mtl
    , pretty-simple
    , process
    , unordered-containers
    , unliftio-pool
    , yaml

executable minimal-example
  import: shared_opts
  hs-source-dirs: app
  main-is: MinimalExample.hs
  build-depends:
      llmchat-effectful
    , stm

executable gen-image
  import: shared_opts
  hs-source-dirs: app
  main-is: GenImage.hs
  other-modules:
      GenCliSupport
      GenImageCLI
  build-depends:
      llmchat-effectful
    , base64-bytestring
    , bytestring
    , directory
    , filepath
    , http-client
    , http-client-tls
    , process

executable gen-video
  import: shared_opts
  hs-source-dirs: app
  main-is: GenVideo.hs
  other-modules:
      GenCliSupport
      GenVideoCLI
  build-depends:
      llmchat-effectful
    , base64-bytestring
    , bytestring
    , directory
    , filepath
    , http-client
    , http-client-tls
    , process
